[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-token-analytics"
description = "Robust simulation and analytics for LLM token pricing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aansh Shah", email = "aansh@briefcasebrain.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "tqdm>=4.62.0",
    "requests>=2.26.0",
    "python-dotenv>=0.19.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "plotly>=5.3.0",
    "pyyaml>=6.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=21.0",
    "pylint>=2.11.0",
    "mypy>=0.910",
    "flake8>=4.0.0",
    "bandit>=1.7.0",
    "isort>=5.10.0",
]
viz = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]
api = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "flask-limiter>=2.0.0",
]
dashboard = [
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
]
providers = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-cloud-aiplatform>=1.25.0",
]
all = [
    "llm-token-analytics[dev,viz,api,dashboard,providers]"
]

[project.scripts]
llm-analytics = "llm_token_analytics.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/llm-token-analytics"
Repository = "https://github.com/your-username/llm-token-analytics.git"
Documentation = "https://llm-token-analytics.readthedocs.io"
Changelog = "https://github.com/your-username/llm-token-analytics/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["llm_token_analytics", "app"]

[tool.setuptools.package-data]
"llm_token_analytics" = ["data/*.json", "configs/*.yaml"]

[tool.setuptools_scm]
write_to = "llm_token_analytics/_version.py"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["llm_token_analytics", "app"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["build/", "dist/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=llm_token_analytics",
    "--cov=app",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["llm_token_analytics", "app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]